# operating-system

./: .clang-format  .gitignore  CMakeLists.txt  linker.ld
boot/: bootloader.S  entry.S  second_stage.S  second_stage.c
driver/: fdt.c  screen.c
fs/: dirname.c  naivefs.c
futex/: futex.c  lock.c
include/: assert.h  context.h  csr.h  elf.h  errno.h  fdt.h  futex.h  interrupt.h  list.h  memory.h  mutex.h  naivefs.h  page_table.h  sbi.h  scheduler.h  screen.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  string.h  time.h
include/asm/: asm.h
include/sys/: scheduler.h  syscall.h
init/: init.S  init.c
interrupt/: entry.S  interrupt.c  syscall.c
memory/: memory.c
printf/: printf.c
scheduler/: block.c  exec.c  exit.c  get_process_info.c  kill.c  scheduler.c  sleep.c  timer.c  unblock.c  wait_pid.c
string/: memmove.c  memrchr.c  memset.c  stpcpy.c  stpncpy.c  strcat.c  strchr.c  strchrnul.c  strcpy.c  strcspn.c  strlen.c  strnlen.c  strrchr.c  strstr.c  strtok.c
test/: CMakeLists.txt  cat.c  clear.c  fly.c  ls.c  ps.c  rw.c  sh.c  test_fs.c  touch.c
test/libc/: CMakeLists.txt  __strerror.h  gets.c  printf.c  rand.c  strerror.c  syscall.S  syscall.c  time.c
test/libc/crt/: crt0.S
test/libc/ctype/: CMakeLists.txt  __ctype_b_loc.c
test/libc/include/: alloca.h  asm.h  assert.h  ctype.h  elf.h  errno.h  features.h  fenv.h  float.h  inttypes.h  limits.h  mailbox.h  math.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  string.h  thread.h
test/libc/include/sys/: scheduler.h  syscall.h  type.h
test/libc/string/: CMakeLists.txt  memchr.c  memcpy.c  strncpy.c  strspn.c
test/libc/thread/: barrier.c  condition_variable.c  mailbox.c  mutex.c  semaphore.c  spinlock.c
tool/: CMakeLists.txt  createimage.c  mkfs.naivefs.c  mount.naivefs.c  run_qemu.sh
